# nominatim-rs

./: Cargo.toml  README.md  shell.nix
examples/: basic.rs  lookup.rs  reverse.rs  search.rs  status.rs
src/: ident.rs  lib.rs
