[package]
name = "nominatim"
version = "0.3.3"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
repository = "https://github.com/grantshandy/nominatim-rs"
documentation = "https://docs.rs/nominatim"
description = "Bindings to the reverse geocoding API powered by openstreetmap."
keywords = ["async", "coordinates", "nominatim", "geocoding", "location"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.3"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }