[package]
name = "nominatim"
version = "0.3.5"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
repository = "https://github.com/grantshandy/nominatim-rs"
documentation = "https://docs.rs/nominatim"
description = "Bindings to the reverse geocoding API powered by openstreetmap."
keywords = ["async", "coordinates", "nominatim", "geocoding", "location"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[features]
# default = ["reqwest"]
reqwest = ["dep:reqwest", "reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
wasm = ["dep:gloo"]

[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
url = "2.4"
gloo = { version = "0.11", features = ["net"], default-features = false, optional = true }
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
